Db_jobsnprofiled.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbjobsnprofiles
spec:
  selector:
    app: dbjobsnprofiles
  ports:
    - port: 3306
      nodePort: 30010
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbjobsnprofiles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbjobsnprofiles
  template:
    metadata:
      labels:
        app: dbjobsnprofiles
    spec:
      containers:
        - name: dbjobsnprofiles
          image: mariadb:10.3.34 
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: hostpath-volume
            #mountPath: /var/lib/mysql
            mountPath: /var/lib/mysql
      volumes:
        - name: hostpath-volume
          hostPath:
           path: /home/nfs
