JobPotalAPI.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobpotalapi
spec:
  selector:
    app: jobpotalapi
  ports:
    - port: 8046
      targetPort: 8445
      nodePort: 30008
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobpotalapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jobpotalapi
  template:
    metadata:
      labels:
        app: jobpotalapi
    spec:
      containers:
        - name: jobpotalapi
          image: jsr9sr/jobpotalapi_app:1.0.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: hostpath-volume
            mountPath: /home/node/app/.env
          - name: hostpath-volume1
            mountPath: /root/data/jnp_data/
          - name: hostpath-volume2
            mountPath: /root/repos/ResumeParser/Resumes/
      volumes:
        - name: hostpath-volume
          hostPath:
           path: /mnt/nfs_clientshare/JobPotalAPI/.env
        - name: hostpath-volume1
          hostPath:
           path: /mnt/nfs_clientshare/jnp_data
        - name: hostpath-volume2
          hostPath:
           path: /mnt/nfs_clientshare/repos
