Python_App.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonparser
spec:
  selector:
    app: pythonparser
  ports:
    - port: 8046
      targetPort: 5000
      nodePort: 30009
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonparser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonparser
  template:
    metadata:
      labels:
        app: pythonparser
    spec:
      containers:
        - name: pythonparser
          image: jsr9sr/pythonparser:1.0.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: hostpath-volume
            mountPath: /data
      volumes:
        - name: hostpath-volume
          hostPath:
           path: /mnt/nfs_clientshare/python
